--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ blog_button:
 
 # Navigation buttons in the front page.
 nav:
-    - {title: Projects, description: My Projects, url: 'http://bxhandhxb.github.io'}
+    - {title: Projects, description: My Projects, url: 'https://github.com/bxhandhxb/'}
     # - {title: Another Button, description: A button, url: 'http://example.com'}
 
 # Pagination
@@ -37,11 +37,11 @@ comment:
     
 # Social
 social:
-    weibo: onevcat
-    github: onevcat
-    twitter: onevcat
-    gplus: 107108267983477358170
-    mail: onev@onevcat.com
+    weibo: 白
+    github: bxhandhxb
+    #twitter: onevcat
+    #gplus: 107108267983477358170
+    mail: 1943190076@qq.com
 
 # Google Analytics
 ga:
